# impliforge

./: .coverage  .gitignore  .rules  Makefile  README.ja.md  README.md  pyproject.toml
Formula/: impliforge.rb
docs/: design.md  final-summary.md  fix-report.md  implementation-plan.md  review-report.md  runbook.md  test-plan.md  test-results.md
src/devagents/: __init__.py  __main__.py  main.py
src/devagents/agents/: base.py  documentation.py  fixer.py  implementation.py  planner.py  requirements.py  reviewer.py  test_design.py  test_execution.py
src/devagents/models/: routing.py
src/devagents/orchestration/: artifact_writer.py  edit_phase.py  orchestrator.py  runtime_support.py  session_manager.py  state_store.py  workflow.py
src/devagents/runtime/: code_editing.py  copilot_client.py  editor.py
src/impliforge/: __init__.py  __main__.py  main.py
src/impliforge/agents/: base.py  documentation.py  fixer.py  implementation.py  planner.py  proposal_utils.py  requirements.py  reviewer.py  test_design.py  test_execution.py
src/impliforge/models/: routing.py
tests/: orchestration_test_helpers.py  test_agents_documentation.py  test_agents_fixer.py  test_agents_implementation.py  test_agents_planner.py  test_agents_proposal_utils.py  test_agents_requirements.py  test_agents_reviewer.py  test_agents_test_design.py  test_agents_test_execution.py  test_main_orchestrator.py  test_models_routing.py  test_module_entrypoint.py  test_orchestration_artifact_writer.py  test_orchestration_edit_phase.py  test_orchestration_helpers.py  test_orchestration_orchestrator.py  test_orchestration_runtime_support.py  test_orchestration_session_manager.py  test_orchestration_state_store.py  test_runtime_code_editing.py  test_runtime_copilot_client.py  test_runtime_editor.py
(+10 files in other folders)
