[project]
name = "devagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rio Fujita", email = "rio_github@rio.st" }
]
requires-python = ">=3.14"
dependencies = [
    "github-copilot-sdk>=0.2.1",
]

[project.optional-dependencies]
test = [
    "pytest>=9",
    "pytest-cov>=7",
    "bandit>=1.7.10",
]

[dependency-groups]
dev = [
    "build>=1.2.2",
    "twine>=6.1.0",
    "ruff>=0.12.0",
]

[project.scripts]
devagents = "devagents:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
