[project]
name = "impliforge"
version = "0.1.0"
description = "Orchestrator-centric multi-agent workflow runner built on the GitHub Copilot SDK"
readme = "README.md"
authors = [
    { name = "Rio Fujita", email = "rio_github@rio.st" }
]
license = { file = "LICENSE" }
keywords = ["copilot", "agents", "workflow", "orchestrator", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.14"
dependencies = [
    "github-copilot-sdk>=0.2.1",
]

[project.optional-dependencies]
test = [
    "pytest>=9",
    "pytest-cov>=7",
    "bandit>=1.7.10",
]

[dependency-groups]
dev = [
    "build>=1.2.2",
    "twine>=6.1.0",
    "ruff>=0.12.0",
]

[project.scripts]
impliforge = "impliforge:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"
